# GenAIExchangeHackathon-Submission

./: .gitattributes  .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  Dockerfile  Dockerfile.dev  alembic.ini  backend_bootstrap.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_09_11_d2c783c7effd_create_tables.py
backend/app/: main.py
backend/app/ai/: core.py  llm_provider.py
backend/app/ai/agents/: mentor_agent.py  recommendation_agent.py  roadmap_agent.py
backend/app/ai/prompts/: satori_base_persona.txt  satori_system_prompt.txt  satori_system_prompt.yaml
backend/app/api/v1/: api.py
backend/app/api/v1/routes/: __init__.py  ai.py  assessments.py  auth.py  interests.py  mentor.py  user_profile.py  users.py
backend/app/core/: config.py  hashing.py  security.py
backend/app/crud/: __init__.py  assessment.py  interest.py  user.py  user_profile.py
backend/app/db/: base.py  base_class.py  session.py
backend/app/models/: __init__.py  assessment.py  interest.py  user.py  user_profile.py
backend/app/schemas/: __init__.py  ai.py  assessment.py  interest.py  mentor.py  user.py  user_profile.py
backend/app/scripts/: seed_questionnaire.py
backend/app/services/: analysis.py  user_service.py
backend/app/utils/: prompt_loader.py
backend/tests/: conftest.py  test_assessments.py  test_interests.py  test_user_profiles.py  test_users.py
backend/tests/api/: test_ai_routes.py
frontend/: Dockerfile  Dockerfile.dev  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+40 files in other folders)
